Possible compatibility problems with earlier versions marked with '*'.

--- (IN PROGRESS)

ZOOM uses smallSetUpperBound=1 instead of 0 for piggyback searches.
It apparantely upsets EBSCO Publishing IR Z39.50 Server which
returns 'malformed search term' otherwise.

SortResponse member resultCount now set to NULL in sort handler of
frontend server.

OPAC support ZOOM. ZOOM_record_get returns OPAC info (as XML) if
type is "opac".

Add three new utility functions for translating OIDs between various
formats -- symbolic name such as "Usmarc", minus-1-terminated int
arrays and dotted strings such as "1.2.840.10003.9.5.1":
 int *oid_name_to_oid(oid_class oclass, const char *name, int *oid);
 char *oid_to_dotstring(const int *oid, char *oidbuf);
 char *oid_name_to_dotstring(oid_class oclass, const char *name, char *oidbuf);

Reverted modifications for ES Update definition for z_IU0Update 
(OID 1.2.840.10003.9.5.1 and 1.2.840.10003.9.5). The definition
is back to YAZ 2.0.2.

String value attributes for CCL parser.

Support for OCLC's locally registered "OCLC-UserInformation" PDU,
which their FirstSearch server returns in Init responses, sometimes
carrying useful diagnostic information when Init fails.  This has the
OID 1.2.840.10003.10.1000.17.1 and is defined in the file
"z39.50/oclcui.asn", where its definition is somewhat different from
what OCLC document on their web-site, as required to interoperate with
their servers.

Support for anonymous authentication in yaz-client.  Use the command
"auth -".

* Fix the OID of the Index Data-local "admin" Extended Service from 
  1.2.840.10003.9.81.1 to 1.2.840.10003.9.1000.81.1.  The omission of
  the 1000, which indicates a locally-defined OID, was a mistake.

--- 2.0.3 2003/06/20

Fix CCL directive @case handling so that it affects string match for
both CCL keywords and qualifiers.

* ESFormat-Update updates. Packages with OID 1.2.840.10003.9.5.1 and
1.2.840.10003.9.5 are now handled by the same decoder z_IU0Update .